[tool.poetry]
name = "yolomation"
version = "0.1.0"
description = "IRC to VM YOLO"
authors = ["Your Name <you@example.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
pyrcb2 = "^0.6.2"
aiohttp = "^3.8.1"
aiojobs = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
